--- a/ONtime/public_html/css/customerservice.css
+++ b/ONtime/public_html/css/customerservice.css
@@ -34,6 +34,11 @@ body {
     width: 100%;
 }
 
+#CustomerInquiries {
+    text-align: justify;
+    text-align: center;
+}
+
 .FAQ {
     margin-left: 50px;
 }
