edited the font to be bold

--- a/ONtime/public_html/css/main.css
+++ b/ONtime/public_html/css/main.css
@@ -99,7 +99,7 @@ footer {
 #carouselheard {
     font-family: collection;
     font-size: 4vw;
-    font-weight: 100;
+    font-weight: bold;
     position: relative;
     padding-right: 10px;
     float: right;
