--- a/ONtime/public_html/css/aboutUs.css
+++ b/ONtime/public_html/css/aboutUs.css
@@ -4,52 +4,142 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 07.10.2019, 02:29:07
+    Created on : 18.09.2019, 03:15:23
     Author     : Nico
 */
-
-section.jumbotron > img{
-    width: 100%;
+/*General text formatting*/
+body{
+    font-family: Georgia, Cambria, "Times New Roman", serif;
+    font-size: 100%;
+    background-color: darkslategrey;
 }
 
+/* Header and navigation */
+header, footer
+{
+color: white;
+background-color: slategray;
+margin: 15px 50px;
+padding: 10px 10px;
+font-family: Arial;
+}
 
-div.thumbnail{
-    position: relative;
+a:visited{
+    color:darkblue;
+    text-decoration: none;
+}
+
+a:hover{
+    font-style: italic;
+    background: yellowgreen;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+article{
+    color: black;
+    background-color: white;
+    margin: 15px 50px;
+    padding: 10px;
+}
+
+.comment{
+    font-style: italic;
+    color: grey;
+}
+
+.comment-end{
+    border-bottom-style: solid;
+    border-bottom-width: thin;
+    padding-bottom: 10px;
+}
+
+h1, h2{
+    text-align: center;
+}
+
+h3{
+    border-bottom-style: solid;
+    border-bottom-width: thin;
+    border-color: grey;
+}
+
+.big-image{
+    border-style: solid;
+    border-color: black;
+    width: 100%;
+    padding: 0 0;
+}
+
+.footerbar{
+    list-style: none;
+    background-color: slategrey;
+    padding: 0px;
+}
+
+.footerbar li{
+    display: inline-block;
+    padding-left: 0px;
     
+}
+
+.footerbar ul{
+    
+    padding: 0;
+}
+
+footer.container-fluid{
+    font-size: 20px;
+    text-align: center;
+}
+
+figure.nonpopup{
+    display: inline-block;
+    margin: 0;
+    position: relative;
+}
+
+figure.popup > img{
+    padding: 10px;
+    margin: 10px;
+    box-shadow: 0 0 25px blueviolet;
+    border-radius: 5px;
+    background-color: white;
 }
 
 figure.popup{
-    visibility: visible;
-    display: block;
+    visibility: hidden;
+    position: absolute;
     z-index: 100;
+    display: block;
     left: 0;
     bottom: 0;
-    display: block;
-    padding-top: 5px;
+    margin: 0;
+    padding: 0;
 }
 
-figure.popup>p{
-    text-align: center;
-}
-figure.popup~img.img-circle.img-responsive{
-    display: block;
-}
-
-div.thumbnail:focus figure.popup{
+figure.nonpopup:hover figure.popup{
     visibility: visible;
     position: absolute;
-    
+    max-width: 50%;
+    height: auto;
+    left: 25%;
+    bottom: 25%;
 }
 
-h1{
-    border-bottom-style: solid;
+header.container-fluid{
+    margin: 0;
+    padding: 0;
 }
 
-h2{
-    text-align: center;
+nav.navbar.navbar-inverse{
+    margin: 0;
+    padding: 0;
 }
 
-#storelocation > img{
-    width: 50%;
-    margin: 5px;
+body header a{
+    font-size: 18px;
+}
+body.container-fluid{
+    overflow: auto;
 }
