--- a/ONtime/public_html/css/customerservice.css
+++ b/ONtime/public_html/css/customerservice.css
@@ -1,15 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-
-
-/* 
-    Created on : Oct 1, 2019, 6:55:11 PM
-    Author     : cleme
-*/
-
 body {
     max-width: 100%;
     overflow-x: hidden;
@@ -46,6 +34,7 @@ body {
     padding-top: 0px
 }
 
+/*Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form */
 input[type=text],
 input[type=email],
 input[type=tel],
@@ -90,18 +79,14 @@ input[type=submit]:hover {
     margin-top: 6px;
 }
 
-
 /* Clear floats after the columns */
-
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-
 @media screen and (max-width: 600px) {
     .col-25,
     .col-75,
@@ -110,11 +95,13 @@ input[type=submit]:hover {
         margin-top: 0;
     }
 }
+/*Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form */
 
 .FAQ {
     margin-left: 50px;
 }
 
+/* FAQ collapsible - https://bootsnipp.com/snippets/qADDB */
 #accordion .panel-heading {
     padding: 0;
 }
@@ -139,7 +126,10 @@ input[type=submit]:hover {
 #accordion a.collapsed[data-toggle="collapse"]::before {
     content: "\e114";
 }
+/* FAQ collapsible - https://bootsnipp.com/snippets/qADDB */
 
+/* Google Map - https://mdbootstrap.com/docs/jquery/javascript/google-maps/#regular */
+/*
 .map-container {
     overflow: hidden;
     position: relative;
@@ -152,6 +142,8 @@ input[type=submit]:hover {
     width: auto;
     position: absolute;
 }
+*/
+/* Google Map - https://mdbootstrap.com/docs/jquery/javascript/google-maps/#regular */
 
 footer {
     background-color: #333;
