--- a/ONtime/public_html/css/aboutUs.css
+++ b/ONtime/public_html/css/aboutUs.css
@@ -8,33 +8,39 @@ and open the template in the editor.
     Author     : Nico
 */
 
-section.jumbotron > img{
-    width: 100%;
-}
-
 
 div.thumbnail{
     position: relative;
     border-style: none;
-    
 }
 
 figure.popup{
-    visibility: hidden;
-    display: block;
-    z-index: 100;
-    left: 0;
-    bottom: 0;
-    display: block;
-    padding-top: 5px;
+    visibility: visible;
+    
 }
+
+.thumbnail:hover figure.popup{
+    visibility: visible;
+}
+
+.thumbnail>img{
+    width: 150px;
+}
+
+.textbox{
+    border-style: solid;
+    color: gray;
+    background-color: whitesmoke;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
 
 figure.popup>p{
     text-align: center;
 }
-figure.popup~img.img-circle.img-responsive{
-    display: block;
-}
+
 
 h1{
     font-style: italic;
@@ -50,18 +56,12 @@ h2{
 #storelocation > img{
     width: 100%;
     max-width: 500px;
-    margin: 5px;
+    margin-bottom: 20px;
 }
 
 .navbar-brand > img{
     width: 80px;
     display: inline-block;
-}
-
-
-
-.thumbnail>img{
-    width: 150px;
 }
 
 .map-container {
@@ -72,7 +72,10 @@ h2{
 }
 
 .map-container iframe {
-    height: 100%;
-    width: auto;
+    height: auto;
+    width: 100%;
+    max-width:500px;
     position: absolute;
+    border-radius: 5px;
 }
+
