worked on shopping cart and added checkout page

--- a/ONtime/public_html/css/aboutUs.css
+++ b/ONtime/public_html/css/aboutUs.css
@@ -29,7 +29,7 @@ figure.popup{
 
 .textbox{
     border-style: solid;
-    color: gray;
+    color: grey;
     background-color: whitesmoke;
     margin-top: 5px;
     padding: 5px;
