--- a/ONtime/public_html/css/customerservice.css
+++ b/ONtime/public_html/css/customerservice.css
@@ -97,6 +97,10 @@ input[type=submit]:hover {
 }
 /*Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form */
 
+#CIquestion {
+    height:200px;
+}
+
 .FAQ {
     margin-left: 50px;
 }
