--- a/ONtime/public_html/css/main.css
+++ b/ONtime/public_html/css/main.css
@@ -1,7 +1,5 @@
 body {
     background-color: white;
-    margin-left: 5px;
-    margin-right: 5px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -88,30 +86,15 @@ footer {
 }
 
 
-.content {
-  padding: 16px;
+.navbar-brand{  
+  float: none;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-left: 50px;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
-}
-#navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-#navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.navbar-nav li:hover {
+  background-color: #ddd;
+  color: black;
 }
