--- a/ONtime/public_html/css/aboutUs.css
+++ b/ONtime/public_html/css/aboutUs.css
@@ -8,8 +8,30 @@ and open the template in the editor.
     Author     : Nico
 */
 
+body{
+    padding-top: 60px;
+}
 
-div.thumbnail{
+.navbar-brand>img{
+    width:150px;
+    height: 80px;
+}
+
+.navbar-brand{  
+    float: none;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left: 50px;
+  }
+  
+  .navbar-nav li:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+
+article.thumbnail{
     position: relative;
     border-style: none;
 }
