--- a/ONtime/public_html/css/shoppingcart.css
+++ b/ONtime/public_html/css/shoppingcart.css
@@ -1,3 +1,35 @@
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 07.10.2019, 02:29:07
+    Author     : Nico
+*/
+
+body{
+    padding-top: 60px;
+}
+
+.navbar-brand>img{
+    width:80px;
+    height: 80px;
+}
+
+.navbar-brand{  
+    float: none;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left: 50px;
+  }
+  
+  .navbar-nav li:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
 #checkoutbutton{
     text-align: right;
 }
