--- a/ONtime/public_html/css/Products.css
+++ b/ONtime/public_html/css/Products.css
@@ -367,4 +367,29 @@ img
 }
 
 
+.navbar-brand{  
+    float: none;
+    position: absolute;
+    left: 50%;
+    top: 5px;
+    transform: translate(-50%, -50%);
+  }
+  
+  .navbar-nav li:hover {
+    background-color: rgb(80, 80, 80);
+    transition: transform .5s, background-color 1.5s ease-in-out;
+    transform: scale(1.05);
+  }
+  .navbar-right{
+    padding-right: 10px;
+  }
+  nav{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 120%;
+  }
+
+  body{
+      padding-top: 30px;
+  }
+
 
