--- a/ONtime/public_html/css/login.css
+++ b/ONtime/public_html/css/login.css
@@ -1,4 +1,5 @@
 body {
+    padding-top: 30px;
     background-size: auto;
     background-image: url('../images/PocketWatchBG.jpg')
     /* hdwallsource,https://blog.hdwallsource.com/15-wonderful-hd-pocket-watch-wallpapers/ */
@@ -30,3 +31,24 @@ body {
     font-size: 15px;
     font-weight: bold;
 }
+
+.navbar-brand{  
+    float: none;
+    position: absolute;
+    left: 50%;
+    top: 5px;
+    transform: translate(-50%, -50%);
+  }
+  
+  .navbar-nav li:hover {
+    background-color: rgb(80, 80, 80);
+    transition: transform .5s, background-color 1.5s ease-in-out;
+    transform: scale(1.05);
+  }
+  .navbar-right{
+    padding-right: 10px;
+  }
+  nav{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 120%;
+  }
