--- a/ONtime/public_html/css/main.css
+++ b/ONtime/public_html/css/main.css
@@ -1,4 +1,5 @@
 body {
+  padding-top:30px ;
     background-color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -90,11 +91,19 @@ footer {
   float: none;
   position: absolute;
   left: 50%;
+  top: 5px;
   transform: translate(-50%, -50%);
-  padding-left: 50px;
 }
 
 .navbar-nav li:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: rgb(80, 80, 80);
+  transition: transform .5s, background-color 1.5s ease-in-out;
+  transform: scale(1.05);
+}
+.navbar-right{
+  padding-right: 10px;
+}
+nav{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 120%;
 }
