--- a/ONtime/public_html/css/headerFooter.css
+++ b/ONtime/public_html/css/headerFooter.css
@@ -7,8 +7,8 @@
     margin: 0px;
     padding: 10px 10px;
     font-family: Arial;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    padding-bottom: 0;
 }
 
 .foot a
