--- a/ONtime/public_html/css/Products.css
+++ b/ONtime/public_html/css/Products.css
@@ -124,38 +124,36 @@ img
     transition: 0.5s;
 }
 
-/*New arrival*/
+/*New arrival and Hot*/
 
 .title-box
 {
-    background:lightseagreen;
+    background:orange;
     color: #fff;
-    width: 160px;
-    padding: 10px 10px;
-    height: 60px;
-    margin-top: 30px;
-    margin-left: -300px;
+    width: 200px;
+    padding: 6px 10px;
+    height: auto;
+    margin-top: 50px;
    
+    display: block;
 }
 
 .title-box h2
 {
     font-size: 24px;
-    text-align-last: center;
-    display: flex;
+    text-align: center;
 }
 
 .title-box::after
 {
     content:'';
-    border-top:  30px solid lightseagreen;
+    border-top:  40px solid orange;
     border-right: 50px solid transparent;
     position:absolute;
     display:flex;
-    margin-top: 4px;
-    margin-left: 200px;
+    margin-top: -62px;
+    margin-left: 180px;
 }
-
 
   
 @media only screen and (min-width: 600px) {
