--- a/ONtime/public_html/css/headerFooter.css
+++ b/ONtime/public_html/css/headerFooter.css
@@ -43,3 +43,9 @@
     padding-right: 10px;
        
 }
+
+#footer {
+  position: absolute; bottom: 0px; left: 0;
+  width: 100%;
+  height:auto;
+  }
