--- a/ONtime/public_html/css/reviews.css
+++ b/ONtime/public_html/css/reviews.css
@@ -8,9 +8,7 @@ and open the template in the editor.
     Author     : Aaron Chua
 */
 
-/*-------review css-------*/
-
-
+/*Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form */
 textarea {
     width: 100%;
     padding: 12px;
@@ -70,9 +68,24 @@ input[type=submit]:hover {
 
 /*Responsive Form CSS - https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_responsive_form */
 
+
+#review {  
+    height:200px;
+}
+
+#productreview
+{
+    margin: 10px auto;
+    
+}
+
+
+
+/*reviews*/
+
 .review
 {
-    margin: 40px auto;
+    margin: 100px auto;
     
 }
 
@@ -122,7 +135,7 @@ input[type=submit]:hover {
 }
 .profile img
 {
-    top: -60px;
+    top: -30px;
     position: absolute;
     left: calc(50% - 70px);
     border: 2px solid white;
@@ -133,7 +146,7 @@ input[type=submit]:hover {
 {
     width: 140px;
     height: 130px;
-    border-radius: 50%;
+    border-radius: 60%;
         
 }
 
@@ -184,11 +197,11 @@ input[type=submit]:hover {
     transition: 0.5s; 
 } 
 
-img
+.star-rating .fa
 {
-    max-width: 100%;
-    height: auto;
+    color: orange;
 }
+
 
 [class*="col-"] {
     width: 100%;
@@ -225,3 +238,6 @@ img
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
 }
+  
+
+
