--- a/ONtime/public_html/css/productDetails.css
+++ b/ONtime/public_html/css/productDetails.css
@@ -8,7 +8,7 @@ and open the template in the editor.
     Author     : Aaron Chua
 */
 
-/*-----------Single Product---------------- */
+/* how to make a single product ecommerce URL https://www.youtube.com/watch?v=4zGBRBHsgEY Author- Easy Tutorials*/
 .singleProduct
 {
     margin-top: 150px;
