--- a/ONtime/public_html/css/reviews.css
+++ b/ONtime/public_html/css/reviews.css
@@ -81,7 +81,7 @@ input[type=submit]:hover {
 
 
 
-/*reviews*/
+/* review URL = https://www.youtube.com/watch?v=qZno3Yk8QKc&t=500s Author = Easy Tutorials*/
 
 .review
 {
@@ -206,7 +206,9 @@ input[type=submit]:hover {
 [class*="col-"] {
     width: 100%;
 }
-  
+
+/* review URL = https://www.youtube.com/watch?v=qZno3Yk8QKc&t=500s Author = Easy Tutorials*/
+
 @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-s-1 {width: 8.33%;}
